Bug 1701625, fix alignment for proton's WebRTC Permission Panel r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D110282

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -890,7 +890,7 @@ popupnotificationcontent {
 .webRTC-selectDevice-icon {
   -moz-context-properties: fill;
   fill: currentColor;
-  margin-inline-end: 6px;
+  margin-inline-end: 8px;
 }
 
 #webRTC-selectCamera-icon {
